# starlight-1961

./: .gitignore  Cargo.toml  README.md  readme.md
.github/workflows/: clippy_workflow.yml  on_release.yml
assets/config/: bindings.ron  display_config.ron
assets/levels/: level_0.json  level_1.json  level_1.ron  level_10.json  level_10.ron  level_2.json  level_3.json  level_4.json  level_4.ron  level_5.json  level_6.json  level_7.json  level_8.json  level_8.ron  level_9.json  level_9.ron
assets/sprites/: background.ron  bullets.ron  explosion.ron  main.ron  menu.ron  numbers.ron  power.ron  push_enter.ron  space_ship.ron  space_ship_with_thrusters.ron
assets/ui/: title.ron  ui.ron
config/: bindings.ron  display_config.ron
misc/: pallet.aseprite
misc/tiled/: Main_starship1_961.tsx  level_0.tmx  level_1.tmx  level_10.tmx  level_2.tmx  level_3.tmx  level_4.tmx  level_5.tmx  level_6.tmx  level_7.tmx  level_8.tmx  level_9.tmx  shapes.tmx
src/: main.rs
src/entities/: blade_saw.rs  bonus.rs  canons.rs  collision.rs  doors.rs  explosion.rs  main_menu.rs  mod.rs  ship.rs  sound.rs
src/resources/: main_resource.rs  mod.rs  ship_resource.rs
src/states/: end_state.rs  level.rs  level_state.rs  main_menu.rs  main_menu_state.rs  mod.rs  next_level.rs
src/systems/: blade_saw_system.rs  bonus_system.rs  bullet_system.rs  canon_system.rs  collision_system.rs  explosion_systems.rs  landing_system.rs  menu_background_system.rs  mod.rs  score_system.rs  ship_systems.rs  thruster_system.rs  ui_system.rs
src/utils/: level_reader.rs  mod.rs  save.rs  sound.rs  (+3 more)
(+5 files in other folders)
