[package]
name = "noom-under-the-moon"
version = "0.1.0"
authors = ["grzi <jeremy.thulliez@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = "0.15.3"
serde = "1.0.117"
serde_json = "1.0.59"
rand = "0.7.3"

[features]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]

